[tool.poetry]
name = "uo_abst"
version = "0.1.0"
description = "Import Urban Observatory data into A/B Street"
authors = ["Dustin Carlino <dabreegster@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
